uc_addresses.css
/* $Id$ */

/* These classes should really be universal... pretty standard stuff. */

.solid-border {
  border: solid 1px #bbb;
  padding: 5px;
}

.solid-border td {
  padding: 5px;
}

.show-onload {
  display: none;
}

.display-none {
  display: none;
}

.list_address{
width:20em;
}
.address-review-table {
  width: auto;
  margin: auto;
  border: solid 1px #999;
  font-size: .9em;
  line-height: 1.4em;
}

.address-review-table td {
  padding-top: 0.1em;
  padding-bottom: 0.2em;
}

.address-review-table .pane-title-row {
  padding: .5em 1em 0 1em;
}

.pane-title-row td{
  padding-left:1em;
  font-weight: bold;
  border: solid 1px #999;
  background-color: #CCCCCC;
}

.pane-title-row td a{
  font-weight: normal;
}

.address-review-table .title-col {
  text-align: right;
  font-weight: bold;
  padding-left: 1em;
}

.address-review-table .data-col {
  padding-right: .5em;
  padding-left: .5em;
  line-height: 1em;
}

.address-review-table .row-border-top {
  border-top: solid 1px #999;
}

.address-review-table .row-border-bottom {
  border-bottom: solid 1px #999;
}

.address-review-table .review-button-row {
  text-align: right;
  background-color: #ddd;
  border: solid 1px #999;
}

.address-review-table .review-button-row form {
  display: inline;
}

/**
 * CSS rules for the default address panes.
 */

.address-pane-table tbody {
  border-top: 0px;
}

.address-pane-table table td {
  padding: 2px;
}

.field-label {
  text-align: right;
  font-weight: bold;
}

.address-pane-table {
  margin-left: auto;
  margin-right: auto;
}

.address-pane-table .form-item {
  display: inline;
}

